--- a/ragaca/Menu.html
+++ b/ragaca/Menu.html
@@ -212,8 +212,15 @@ img{
     top:1px;
 }
 
+
 }
-        </style>
+      
+      @media only screen and (max-width:500px){
+   .nav a {
+        font-size:180%!important;
+    }
+}
+  </style>
         <div class="buttondiv">
 <button id="button"><img src="https://cdn0.iconfinder.com/data/icons/mobile-basic-vol-1/32/Burger_Menu-512.png"></button>
 </div>
