--- a/ragaca/Menu.html
+++ b/ragaca/Menu.html
@@ -1,5 +1,6 @@
 <html>
 <head><title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <style type="text/css">
@@ -212,14 +213,14 @@ img{
     top:1px;
 }
 
-
 }
       
       @media only screen and (max-width:500px){
    .nav a {
-        font-size:180%!important;
+        font-size:60%!important;
     }
 }
+
   </style>
         <div class="buttondiv">
 <button id="button"><img src="https://cdn0.iconfinder.com/data/icons/mobile-basic-vol-1/32/Burger_Menu-512.png"></button>
