--- a/ragaca/Menu.html
+++ b/ragaca/Menu.html
@@ -4,220 +4,243 @@
 </head>
 <body>
 <style type="text/css">
-            #mySideMasterNav a {
-                color: white;
-                cursor: pointer;
-            }
-
-                #mySideMasterNav a:visited {
-                    color: white;
-                    cursor: pointer;
-                }
-
-                #mySideMasterNav a:active {
-                    color: white;
-                    cursor: pointer;
-                }
-
-                #mySideMasterNav a:hover {
-                    color: azure;
-                    cursor: pointer;
-                }
-
-            #adminMenu ul {
-                display: inline-block;
-            }
-
-            nav {
-                display: block;
-                text-align: center;
-            }
-
-                nav ul {
-                    margin: 0;
-                    padding: 0;
-                    list-style: none;
-                    z-index: 500;
-                }
-
-            .nav a {
-                display: block;
-                background: #111;
-                color: #fff;
-                text-decoration: none;
-                padding: .8em 1.8em;
-                text-transform: uppercase;
-                font-size: 80%;
-                letter-spacing: 2px;
-                text-shadow: 0 -1px 0 #000;
-                position: relative;
-            }
-
-            .nav {
-                vertical-align: top;
-                display: inline-block;
-                box-shadow: 1px -1px -1px 1px #000, -1px 1px -1px 1px #fff, 0 0 6px 3px #fff;
-                border-radius: 6px;
-            }
-
-                .nav li {
-                    position: relative;
-                }
-
-                .nav > li {
-                    float: left;
-                    border-bottom: 4px #aaa solid;
-                    margin-right: 1px;
-                }
-
-                    .nav > li > a {
-                        margin-bottom: 1px;
-                        box-shadow: inset 0 2em .33em -.5em #555;
-                    }
-
-                    .nav > li:hover, .nav > li:hover > a {
-                        border-bottom-color: orange;
-                    }
-
-                .nav li:hover > a {
-                    color: orange;
-                }
-
-                .nav > li:first-child {
-                    border-radius: 4px 0 0 4px;
-                }
-
-                    .nav > li:first-child > a {
-                        border-radius: 4px 0 0 0;
-                    }
-
-                .nav > li:last-child {
-                    border-radius: 0 0 4px 0;
-                    margin-right: 0;
-                }
-
-                    .nav > li:last-child > a {
-                        border-radius: 0 4px 0 0;
-                    }
-
-                .nav li li a {
-                    margin-top: 1px
-                }
-
-                .nav li a:first-child:nth-last-child(2):before {
-                    content: "";
-                    position: absolute;
-                    height: 0;
-                    width: 0;
-                    border: 5px solid transparent;
-                    top: 50%;
-                    right: 5px;
-                }
-
-                /* submenu positioning*/
-                .nav ul {
-                    position: absolute;
-                    white-space: nowrap;
-                    border-bottom: 5px solid orange;
-                    left: -99999em;
-                }
-
-                .nav > li:hover > ul {
-                    left: auto;
-                    padding-top: 5px;
-                    min-width: 100%;
-                }
-
-                .nav > li li ul {
-                    border-left: 1px solid #fff;
-                }
-
-                .nav > li li:hover > ul {
-                    /* margin-left: 1px */
-                    left: 100%;
-                    top: -1px;
-                }
-                /* arrow hover styling */
-                .nav > li > a:first-child:nth-last-child(2):before {
-                    border-top-color: #aaa;
-                }
-
-                .nav > li:hover > a:first-child:nth-last-child(2):before {
-                    border: 5px solid transparent;
-                    border-bottom-color: orange;
-                    margin-top: -5px
-                }
-
-                .nav li li > a:first-child:nth-last-child(2):before {
-                    border-left-color: #aaa;
-                    margin-top: -5px
-                }
-
-                .nav li li:hover > a:first-child:nth-last-child(2):before {
-                    border: 5px solid transparent;
-                    border-right-color: orange;
-                    right: 10px;
-                }
-                button{
-                    display:none;
-                }
-                 #adminMenu{
-    display:block;
-  }
-
-                @media only screen and (max-width: 1024px) {
-  ul{
-    flex-direction: column;
-  }
-  
-  a{
-    display: block;
-  }
-  
-  li{
-    margin: 0;
-  }
-  
-  button{
-    display: block;
-    padding: 1vw;
-    font-size: 3vh;
-    background-color: transparent;
-    border-color:black;
-    border-radius:5px;
-    outline: none;
+       #mySideMasterNav a {
+    color: white;
     cursor: pointer;
-    float:right;
-    font-size:0px;
-  }
-  #adminMenu{
-    display:none;
-  }
-  .display{
-    display:none!important;
-  }
-  #adminMenu ul {
-   float:left;
-    display: inline-grid;
-}
-img{
-    width:40px;
-}
-.block{
-    display:block!important;
-}
-.buttondiv{
-        height: 60px;
-}
-.top{
-    top:1px;
 }
 
+#mySideMasterNav a:visited {
+    color: white;
+    cursor: pointer;
 }
-      
-      @media only screen and (max-width:500px){
-   .nav a {
-        font-size:55%!important;
+
+#mySideMasterNav a:active {
+    color: white;
+    cursor: pointer;
+}
+
+#mySideMasterNav a:hover {
+    color: azure;
+    cursor: pointer;
+}
+
+#adminMenu ul {
+    display: inline-block;
+}
+
+nav {
+    display: block;
+    text-align: center;
+}
+
+nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    z-index: 500;
+}
+
+.nav a {
+    display: block;
+    background: #111;
+    color: #fff;
+    text-decoration: none;
+    padding: .8em 1.8em;
+    text-transform: uppercase;
+    font-size: 80%;
+    letter-spacing: 2px;
+    text-shadow: 0 -1px 0 #000;
+    position: relative;
+}
+
+.nav {
+    vertical-align: top;
+    display: inline-block;
+    box-shadow: 1px -1px -1px 1px #000, -1px 1px -1px 1px #fff, 0 0 6px 3px #fff;
+    border-radius: 6px;
+}
+
+.nav li {
+    position: relative;
+}
+
+.nav>li {
+    float: left;
+    border-bottom: 4px #aaa solid;
+    margin-right: 1px;
+}
+
+.nav>li>a {
+    margin-bottom: 1px;
+    box-shadow: inset 0 2em .33em -.5em #555;
+}
+
+.nav>li:hover,
+.nav>li:hover>a {
+    border-bottom-color: orange;
+}
+
+.nav li:hover>a {
+    color: orange;
+}
+
+.nav>li:first-child {
+    border-radius: 4px 0 0 4px;
+}
+
+.nav>li:first-child>a {
+    border-radius: 4px 0 0 0;
+}
+
+.nav>li:last-child {
+    border-radius: 0 0 4px 0;
+    margin-right: 0;
+}
+
+.nav>li:last-child>a {
+    border-radius: 0 4px 0 0;
+}
+
+.nav li li a {
+    margin-top: 1px
+}
+
+.nav li a:first-child:nth-last-child(2):before {
+    content: "";
+    position: absolute;
+    height: 0;
+    width: 0;
+    border: 5px solid transparent;
+    top: 50%;
+    right: 5px;
+}
+
+
+/* submenu positioning*/
+
+.nav ul {
+    position: absolute;
+    white-space: nowrap;
+    border-bottom: 5px solid orange;
+    left: -99999em;
+}
+
+.nav>li:hover>ul {
+    left: auto;
+    padding-top: 0px;
+    min-width: 100%;
+}
+
+.nav>li li ul {
+    border-left: 1px solid #fff;
+}
+
+.nav>li li:hover>ul {
+    /* margin-left: 1px */
+    left: 100%;
+    top: -1px;
+}
+
+
+/* arrow hover styling */
+
+.nav>li>a:first-child:nth-last-child(2):before {
+    border-top-color: #aaa;
+}
+
+.nav>li:hover>a:first-child:nth-last-child(2):before {
+    border: 5px solid transparent;
+    border-bottom-color: orange;
+    margin-top: -5px
+}
+
+.nav li li>a:first-child:nth-last-child(2):before {
+    border-left-color: #aaa;
+    margin-top: -5px
+}
+
+.nav li li:hover>a:first-child:nth-last-child(2):before {
+    border: 5px solid transparent;
+    border-right-color: orange;
+    right: 10px;
+}
+
+button {
+    display: none;
+}
+
+#adminMenu {
+    display: block;
+}
+
+@media only screen and (max-width: 1024px) {
+    ul {
+        flex-direction: column;
+    }
+    a {
+        display: block;
+    }
+    li {
+        margin: 0;
+    }
+    button {
+        display: block;
+        padding: 1vw;
+        font-size: 3vh;
+        background-color: transparent;
+        border-color: black;
+        border-radius: 5px;
+        outline: none;
+        cursor: pointer;
+        float: right;
+        font-size: 0px;
+    }
+    #adminMenu {
+        display: none;
+    }
+    .display {
+        display: none!important;
+    }
+    #adminMenu ul {
+        display: grid;
+    }
+    img {
+        width: 40px;
+    }
+    .block {
+        display: block!important;
+    }
+    .buttondiv {
+        height: 60px;
+    }
+    .nav>li li:hover>ul {
+        left: auto;
+        min-width: 100%;
+        top: auto;
+    }
+    .nav>li li ul {
+        border-left: 0px solid #fff;
+    }
+    .nav>li:hover>ul {
+        min-width: 100%;
+        left: auto;
+    }
+    .nav li {
+        border: white 0.5px solid;
+    }
+    .nav>li {
+        float: left;
+        border-bottom: 3px #aaa solid;
+    }
+}
+
+@media only screen and (max-width:500px) {
+    .nav a {
+        font-size: 90%!important;
+    }
+    .nav>li {
+        float: left;
+        border-bottom: 3px #aaa solid;
     }
 }
 
@@ -396,6 +419,7 @@ img{
 }
 });
 });
+
 
 </script>
 
